[package]
name = "cose-rs"
version = "0.1.0"
edition = "2021"
description = "Pure rust implemenation of RFC-8152, using the `Signer` and `Verifier` traits from RustCrypto's `signature` crate to abstract over cryptographic backend."
readme = "README.md"
homepage = "https://github.com/spruceid/cose-rs"
repository = "https://github.com/spruceid/cose-rs"
license = "Apache-2.0"

[features]
default = ["p256", "p384"]
async = ["async-signature"]
p256 = ["dep:p256"]
p384 = ["dep:p384"]

[dependencies]
async-signature = { version = "0.2.1", optional = true }
p256 = { version = "0.11.1", features = ["ecdsa-core"], optional = true }
p384 = { version = "0.11.2", features = ["ecdsa-core"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.7"
serde_cbor = { version = "0.11.2", features = ["tags"] }
signature = "1.6"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4.3"
p256 = { version = "0.11.1", features = ["ecdsa-core"] }
